// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cinematic flight > keeps wherever it had reached when cancelled, and never fires onArrive 1`] = `
{
  "after": {
    "altitude": 141348,
    "azimuth": 3.6143,
    "distance": 141777,
    "elevation": 0.586321,
    "far": 5672070000,
    "focus": "jupiter",
    "mode": "orbit",
    "near": 1417.77,
    "position": [
      -105147,
      -53770,
      78445.1,
    ],
    "quaternion": [
      0.403139,
      -0.246636,
      -0.459913,
      0.751751,
    ],
    "radii": 330.519,
    "settling": false,
    "travelling": 0,
  },
  "before": {
    "altitude": 141348,
    "azimuth": 0.932802,
    "distance": 141777,
    "elevation": 0.3,
    "far": 5672070000,
    "focus": "jupiter",
    "mode": "orbit",
    "near": 1417.77,
    "position": [
      -105147,
      -53770,
      78445.1,
    ],
    "quaternion": [
      -0.253691,
      0.436382,
      0.69476,
      -0.512367,
    ],
    "radii": 330.519,
    "settling": true,
    "travelling": 0.876883,
  },
}
`;

exports[`cinematic flight > switches focus at once, travels, and arrives framed 1`] = `
[
  {
    "altitude": 135383,
    "azimuth": 2.99775,
    "distance": 135403,
    "elevation": 0.3,
    "far": 5417130000,
    "focus": "mars",
    "mode": "orbit",
    "near": 1354.03,
    "position": [
      -130940,
      33900.7,
      6290.23,
    ],
    "quaternion": [
      0.0102035,
      0.618115,
      0.78404,
      0.0557752,
    ],
    "radii": 6644.84,
    "settling": true,
    "travelling": 0.661728,
  },
  {
    "altitude": 22113.1,
    "azimuth": 2.99775,
    "distance": 22133.5,
    "elevation": 0.3,
    "far": 886338000,
    "focus": "mars",
    "mode": "orbit",
    "near": 221.335,
    "position": [
      -21436.7,
      4956.13,
      2407.11,
    ],
    "quaternion": [
      -0.388186,
      0.539731,
      0.610769,
      -0.430074,
    ],
    "radii": 1086.19,
    "settling": true,
    "travelling": 0.945315,
  },
  {
    "altitude": 2336.05,
    "azimuth": 2.99775,
    "distance": 2356.43,
    "elevation": 0.3,
    "far": 95257200,
    "focus": "mars",
    "mode": "orbit",
    "near": 23.5643,
    "position": [
      -2272.11,
      447.262,
      436.132,
    ],
    "quaternion": [
      -0.405439,
      0.49303,
      0.594552,
      -0.488926,
    ],
    "radii": 115.64,
    "settling": true,
    "travelling": 0.987081,
  },
  {
    "altitude": 288.603,
    "azimuth": 2.99775,
    "distance": 308.98,
    "elevation": 0.3,
    "far": 13359200,
    "focus": "mars",
    "mode": "orbit",
    "near": 3.0898,
    "position": [
      -294.913,
      48.7279,
      78.2347,
    ],
    "quaternion": [
      -0.395302,
      0.465977,
      0.603634,
      -0.512081,
    ],
    "radii": 15.163,
    "settling": true,
    "travelling": 0.787648,
  },
  {
    "altitude": 73.9774,
    "azimuth": 2.99775,
    "distance": 94.3546,
    "elevation": 0.3,
    "far": 4774190,
    "focus": "mars",
    "mode": "orbit",
    "near": 0.943546,
    "position": [
      -89.2813,
      13.071,
      27.5824,
    ],
    "quaternion": [
      -0.38896,
      0.450052,
      0.60818,
      -0.525624,
    ],
    "radii": 4.6304,
    "settling": true,
    "travelling": 0.326341,
  },
  {
    "altitude": 65.207,
    "azimuth": 2.99775,
    "distance": 85.5842,
    "elevation": 0.3,
    "far": 4423370,
    "focus": "mars",
    "mode": "orbit",
    "near": 0.855842,
    "position": [
      -80.9174,
      11.72,
      25.2919,
    ],
    "quaternion": [
      0.388425,
      -0.448738,
      -0.608528,
      0.526739,
    ],
    "radii": 4.2,
    "settling": false,
    "travelling": 0,
  },
  {
    "altitude": 65.207,
    "azimuth": 2.99775,
    "distance": 85.5842,
    "elevation": 0.3,
    "far": 4423370,
    "focus": "mars",
    "mode": "orbit",
    "near": 0.855842,
    "position": [
      -80.9174,
      11.72,
      25.2919,
    ],
    "quaternion": [
      0.388425,
      -0.448738,
      -0.608528,
      0.526739,
    ],
    "radii": 4.2,
    "settling": false,
    "travelling": 0,
  },
  {
    "altitude": 65.207,
    "azimuth": 2.99775,
    "distance": 85.5842,
    "elevation": 0.3,
    "far": 4423370,
    "focus": "mars",
    "mode": "orbit",
    "near": 0.855842,
    "position": [
      -80.9174,
      11.72,
      25.2919,
    ],
    "quaternion": [
      0.388425,
      -0.448738,
      -0.608528,
      0.526739,
    ],
    "radii": 4.2,
    "settling": false,
    "travelling": 0,
  },
]
`;

exports[`free flight > toggles, moves by the clearance ahead, rolls, and aims back at the focus 1`] = `
{
  "aimed": {
    "altitude": 104.091,
    "azimuth": 0.932802,
    "distance": 142.36,
    "elevation": 0.3,
    "far": 6694400,
    "focus": "earth",
    "mode": "free",
    "near": 1.4236,
    "position": [
      81.0006,
      109.249,
      42.0703,
    ],
    "quaternion": [
      0.186129,
      0.563556,
      0.764232,
      0.252408,
    ],
    "radii": 3.72,
    "settling": false,
    "travelling": 0,
  },
  "flying": {
    "altitude": 104.091,
    "azimuth": 0.932802,
    "distance": 142.36,
    "elevation": 0.3,
    "far": 6694400,
    "focus": "earth",
    "mode": "free",
    "near": 1.4236,
    "position": [
      81.0006,
      109.249,
      42.0703,
    ],
    "quaternion": [
      0.505413,
      0.311124,
      0.747122,
      -0.299279,
    ],
    "radii": 3.72,
    "settling": false,
    "travelling": 0,
  },
}
`;

exports[`orbit mode > frames a planet at 4.2 radii on the daylit side, already settled 1`] = `
{
  "altitude": 122.46,
  "azimuth": 0.932802,
  "distance": 160.729,
  "elevation": 0.3,
  "far": 7429160,
  "focus": "earth",
  "mode": "orbit",
  "near": 1.60729,
  "position": [
    91.4523,
    123.346,
    47.4987,
  ],
  "quaternion": [
    0.186129,
    0.563556,
    0.764232,
    0.252408,
  ],
  "radii": 4.2,
  "settling": false,
  "travelling": 0,
}
`;

exports[`orbit mode > frames a whole system from above 1`] = `
{
  "altitude": 8348.4,
  "azimuth": 0.932802,
  "distance": 12522.6,
  "elevation": 0.3,
  "far": 501904000,
  "focus": "sun",
  "mode": "orbit",
  "near": 125.226,
  "position": [
    7125.16,
    9610.02,
    3700.68,
  ],
  "quaternion": [
    0.186129,
    0.563556,
    0.764232,
    0.252408,
  ],
  "radii": 3,
  "settling": false,
  "travelling": 0,
}
`;

exports[`orbit mode > orbits, zooms and rolls from the keys, then eases to rest 1`] = `
{
  "moving": {
    "altitude": 63.6791,
    "azimuth": 0.305213,
    "distance": 101.948,
    "elevation": 0.927589,
    "far": 5077920,
    "focus": "earth",
    "mode": "orbit",
    "near": 1.01948,
    "position": [
      58.3189,
      18.3738,
      81.5764,
    ],
    "quaternion": [
      0.105386,
      0.298002,
      0.570473,
      0.758056,
    ],
    "radii": 2.664,
    "settling": true,
    "travelling": 0,
  },
  "rested": {
    "altitude": 54.4638,
    "azimuth": 0.182802,
    "distance": 92.7326,
    "elevation": 1.05,
    "far": 4709300,
    "focus": "earth",
    "mode": "orbit",
    "near": 0.927326,
    "position": [
      45.3723,
      8.38779,
      80.4384,
    ],
    "quaternion": [
      0.0868309,
      0.242381,
      0.48582,
      0.835279,
    ],
    "radii": 2.42319,
    "settling": false,
    "travelling": 0,
  },
}
`;

exports[`orbit mode > restores a shared view exactly, with elevation clamped 1`] = `
{
  "altitude": 420.957,
  "azimuth": 2.5,
  "distance": 459.226,
  "elevation": 1.56207,
  "far": 19369000,
  "focus": "earth",
  "mode": "orbit",
  "near": 4.59226,
  "position": [
    -3.21054,
    2.39835,
    459.208,
  ],
  "quaternion": [
    -0.00195505,
    0.0039008,
    0.893992,
    -0.448063,
  ],
  "radii": 12,
  "settling": false,
  "travelling": 0,
}
`;
